# Operating_Systems_Lab

exam2/: CMakeLists.txt  waiting_time_exam.txt
exam2/src/: main.c
exam2_practice/cpu_sched_intro/: CMakeLists.txt
exam2_practice/cpu_sched_intro/src/: main.c
exam2_practice/cpu_sched_intro_prio/src/: main.c
exam2_practice/mmap_example/: CMakeLists.txt
exam2_practice/mmap_example/src/: main.c
exam2_practice/test_timers/: CMakeLists.txt
exam2_practice/test_timers/src/: main.c
exam2_practice/time_sleep_test/: CMakeLists.txt
exam2_practice/time_sleep_test/src/: main.c
exam3/: CMakeLists.txt
exam3/src/: decryptor.c  encryptor.c
homework_2/ex1/: CMakeLists.txt
homework_2/ex1/src/: main.c  main2.c
homework_project_1/mouse_plotter/: CMakeLists.txt
homework_project_1/mouse_plotter/include/: plotter.h
homework_project_1/mouse_plotter/src/: main.c  plotter.c
homework_project_1/mouse_saver/: CMakeLists.txt
homework_project_1/mouse_saver/include/: saver.h
homework_project_1/mouse_saver/src/: main.c  saver.c
lab_01/: zip_deliverables.sh
lab_01/exercise_1/: CMakeLists.txt
lab_01/exercise_1/include/: guessing_game.h
lab_01/exercise_1/src/: guessing_game.c  main.c
lab_01/exercise_2/: CMakeLists.txt
lab_01/exercise_2/include/: time_struct.h
lab_01/exercise_2/src/: main.c  time_struct.c
lab_01/exercise_3/: CMakeLists.txt
lab_01/exercise_3/include/: card.h
lab_01/exercise_3/src/: card.c  main.c
lab_01/exercise_4/: CMakeLists.txt
lab_01/exercise_4/include/: str_handler.h
lab_01/exercise_4/src/: main.c  str_handler.c
lab_01/exercise_5/: CMakeLists.txt
lab_01/exercise_5/include/: numlib.h
lab_01/exercise_5/src/: main.c  numlib.c
lab_01/exercise_6/: CMakeLists.txt
lab_01/exercise_6/include/: text_handler.h
lab_01/exercise_6/src/: main.c  text_handler.c
lab_01/hello_world/: CMakeLists.txt
lab_01/hello_world/src/: hello.c
lab_02/: zip_deliverables.sh
lab_02/exercise_1/: CMakeLists.txt  README.md
lab_02/exercise_1/include/: child_creator.h  greetlib.h
lab_02/exercise_1/src/: child_creator.c  fork_maker.c  greetings.c  greetlib.c
lab_02/exercise_2/: CMakeLists.txt  README.md
lab_02/exercise_2/include/: termlib.h
lab_02/exercise_2/src/: hello.c  main.c  termlib.c
lab_02/exercise_3/: CMakeLists.txt  README.md
lab_02/exercise_3/include/: counter_handler.h  infinite_counter.h  spawn_counters.h
lab_02/exercise_3/src/: counter_handler.c  infinte_counter.c  main.c  spawn_counters.c
lab_02/exercise_4/: CMakeLists.txt  README.md
lab_02/exercise_4/include/: msgq.h
lab_02/exercise_4/src/: main.c  msgq_sum_numbers.c  msgq_write_numbers.c  shm_sum_numbers.c  shm_write_numbers.c
lab_02/hello_world/include/: hello.h
lab_02/hello_world/src/: main.c
lab_03/: zip_deliverables.sh
lab_03/exercise_1/: CMakeLists.txt
lab_03/exercise_1/include/: asin_calc_threading.h
lab_03/exercise_1/src/: asin_calc_threading.c  main.c
lab_03/exercise_2/: CMakeLists.txt
lab_03/exercise_2/include/: tangent_calculator.h
lab_03/exercise_2/src/: main.c  tangent_calculator.c
lab_03/exercise_3/: CMakeLists.txt
lab_03/exercise_3/include/: thread_routines.h
lab_03/exercise_3/src/: main.c  thread_routines.c
lab_03/exercise_4/: CMakeLists.txt
lab_03/exercise_4/include/: ball.h
lab_03/exercise_4/src/: ball.c  main.c
lab_03/exercise_5/: CMakeLists.txt
lab_03/exercise_5/include/: ball.h
lab_03/exercise_5/src/: ball.c  main.c
lab_04/exercise_1/: CMakeLists.txt
lab_04/exercise_1/src/: main.c
lab_04/exercise_2/: CMakeLists.txt
lab_04/exercise_2/src/: reader.c  writer.c
lab_05/exercise_1/: CMakeLists.txt  cpu_scheduling.md
lab_05/exercise_1/experiments/: cpu_scheduling.md
lab_05/exercise_1/include/: sched_experiment.h
lab_05/exercise_1/src/: main.c  sched_experiment.c
lab_05/exercise_2/: cpu_ticks_experiment.md  schedule.c
lab_05/exercise_2/include/: sched_experiment.h
lab_05/exercise_3/: CMakeLists.txt  thread_times.md
mmap_example/: main.c
practice/exam_1/: CMakeLists.txt
practice/exam_1/src/: cond_wait.c  execvp.c  fork.c  message_queues.c  mutex.c  shm_semaphores.c  signals.c  threads.c  waits.c
project_2/: CMakeLists.txt  README.md
project_2/include/: driver.h  supervisor.h
project_2/src/: driver.c  start_driver.c  start_supervisor.c  supervisor.c
(+3 files in other folders)
